# casanntra

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml
casanntra/: __init__.py  antecedent_inputs.py  debug_model.py  fit_from_config.py  h5_tf.py  model_builder.py  model_conversion.py  models.py  multi_stage_model_builder.py  read_data.py  scaling.py  single_or_list.py  staged_learning.py  test_gru.py  test_gru2.py  test_mlp.py  test_mlp_uni.py  tide_transforms.py  xvalid.py  xvalid_multi.py
conda.recipe/: meta.yaml
data/: convert_data.py  dsm2_base_1.csv  dsm2_base_10.csv  dsm2_base_100.csv  dsm2_base_1001.csv  dsm2_base_1002.csv  dsm2_base_1003.csv  dsm2_base_1004.csv  dsm2_base_1005.csv  dsm2_base_1006.csv  dsm2_base_1007.csv  dsm2_base_101.csv  dsm2_base_102.csv  dsm2_base_103.csv  dsm2_base_104.csv  dsm2_base_105.csv  dsm2_base_106.csv  dsm2_base_107.csv  dsm2_base_11.csv  dsm2_base_12.csv  dsm2_base_13.csv  dsm2_base_14.csv  dsm2_base_15.csv  dsm2_base_16.csv  dsm2_base_17.csv  dsm2_base_18.csv  dsm2_base_19.csv  dsm2_base_2.csv  dsm2_base_20.csv  dsm2_base_21.csv  dsm2_base_22.csv  dsm2_base_23.csv  dsm2_base_24.csv  dsm2_base_25.csv  dsm2_base_26.csv  dsm2_base_27.csv  dsm2_base_28.csv  dsm2_base_29.csv  dsm2_base_3.csv  dsm2_base_30.csv  (+154 more)
example/: compare_sf.py  compare_tl_to_original_model.py  copyann.bat  dsm2.schism_base_gru2.h5  dsm2.schism_base_gru2.weights.h5  dsm2_base_gru2.h5  dsm2_base_gru2.weights.h5  fit_from_config.py  full_data_fit_gru1.py  full_data_fit_mlp1.py  full_data_fit_mlp_uni.py  gridsearch.py  h5_tf.py  h5_tf_orig.py  hist_data.py  pca_data.py  plot_multi_comparison.py  restart_config.yml  test_gru.py  test_gru1.py  test_gru1_clipped.py  test_gru1_multi.py  test_gru1_suisun.py  test_gru2.py  test_gru2_multi_tanh_ecscale.py  test_gru2_nopca.py  test_gru2_pca2.py  test_gru2_pca2_suisun.py  test_gru2_subtidalgrad.py  test_mlp.py  test_mlp1.py  test_mlp1_multi.py  test_mlp_uni.py  test_scaling.py  test_tl_gru.py  tidalenergy.py  transfer_config.yml  transfer_config_schism_v2.yml  transfer_config_schism_v3.yml  transfer_config_schism_v4.yml  (+11 more)
src/casanntra/: __init__.py
(+3 files in other folders)
